@@ -11,6 +11,7 @@ version 1.1-beta2 xx - 2012
 . [NEW] TileMap: supports in-memory TMX map creation (issue #1239)
 . [NEW] TileMap: Flipped tiles can be changed during runtime (issue #1264)
 . [NEW] Types: Added convenience function to create a ccColor4F from color components
+. [FIX] Actions: incorrect behavior of CCRepeat
 . [FIX] ColorLayer: incorrect size in init method
 . [FIX] Denshion: Background music fades ok (issue #1304)
 . [FIX] EAGLView: always destroy and recreate OpenGL buffers completely (issue #1254) 
